fix: slider overflow in homepage

--- a/components/layouts/Home/Home.module.scss
+++ b/components/layouts/Home/Home.module.scss
@@ -73,6 +73,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
 @keyframes show {
